[gd_scene load_steps=22 format=3 uid="uid://d3hdkhvwcgoqh"]

[ext_resource type="Texture2D" uid="uid://ht55poe4bsiu" path="res://assets/art/UI/stand-in-background.png" id="1_yjsyi"]
[ext_resource type="AudioStream" uid="uid://cxny0sb51m7gc" path="res://assets/sounds/ui-sounds/click_start.mp3" id="2_u5veq"]
[ext_resource type="FontFile" uid="uid://cy5yogra0ychh" path="res://assets/font/Super Trend.ttf" id="4_0yuid"]
[ext_resource type="AudioStream" uid="uid://t6utdx5syak2" path="res://assets/music/titleTrack2.mp3" id="4_yjsyi"]
[ext_resource type="Texture2D" uid="uid://dr0tq8sjdruxj" path="res://assets/art/UI/spider_sprite.png" id="5_82207"]
[ext_resource type="Script" uid="uid://bn355teftvhgd" path="res://scripts/spider/SpiderHang.gd" id="5_rvnbb"]
[ext_resource type="Texture2D" uid="uid://b1io0urnn8x2v" path="res://assets/art/UI/TitleSprite.png" id="7_jg1sb"]
[ext_resource type="Texture2D" uid="uid://c8yxsoo6j11ps" path="res://assets/art/Fly.png" id="8_7b33f"]
[ext_resource type="Script" uid="uid://cfa3u5aa8id5c" path="res://scripts/UI/menu_controller.gd" id="8_vg0i1"]
[ext_resource type="Script" uid="uid://c6ad1h8olu4yv" path="res://scripts/fly/UI_fly.gd" id="9_0yuid"]
[ext_resource type="StyleBox" uid="uid://ca0do5uvsghxu" path="res://assets/styles/button-style-box.tres" id="11_vg0i1"]

[sub_resource type="Animation" id="Animation_e7is1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.75, 2.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.04363323]
}

[sub_resource type="Animation" id="Animation_jg1sb"]
resource_name = "title_chip"
length = 4.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.0047402, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.75, 2.75), Vector2(2.9, 2.9), Vector2(2.75, 2.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.04363323, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7b33f"]
_data = {
&"RESET": SubResource("Animation_e7is1"),
&"title_chip": SubResource("Animation_jg1sb")
}

[sub_resource type="Animation" id="Animation_ydf1q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-110.00001, 139)]
}

[sub_resource type="Animation" id="Animation_vg0i1"]
resource_name = "fly"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.99369156, 3.0157888, 5.2895637, 5.3372955),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-110.00001, 139), Vector2(147, 91), Vector2(670.00006, 167), Vector2(1257.6586, 139), Vector2(1270, 139)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sx02u"]
_data = {
&"RESET": SubResource("Animation_ydf1q"),
&"fly": SubResource("Animation_vg0i1")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4nice"]
bg_color = Color(0.0864, 0.48, 0.14543995, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydf1q"]
bg_color = Color(0.46, 0.06899999, 0.06899999, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 10
shadow_offset = Vector2(0, 15)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sx02u"]
bg_color = Color(0.2901961, 0.61960787, 0.27450982, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(0.84, 0.84, 0.84, 0.6)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nmny"]
bg_color = Color(0.122549996, 0.45, 0.11699999, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 10
shadow_offset = Vector2(0, 15)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StandInBackground" type="Sprite2D" parent="."]
position = Vector2(590, 324)
scale = Vector2(0.8138021, 0.78906244)
texture = ExtResource("1_yjsyi")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_yjsyi")
volume_db = -13.631
autoplay = true

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 240.0
offset_top = -167.00002
offset_right = 280.0
offset_bottom = -127.000015
scale = Vector2(3.5, 3.5)
script = ExtResource("5_rvnbb")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.42857
offset_top = -1.9999962
offset_right = 49.571426
offset_bottom = 245.0
grow_horizontal = 2
texture = ExtResource("5_82207")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 318.00003
offset_top = 42.00002
offset_right = 618.0
offset_bottom = 342.00003
rotation = -0.04363323
scale = Vector2(2.75, 2.75)
pivot_offset = Vector2(142.96986, 147.09366)
texture = ExtResource("7_jg1sb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
libraries = {
&"": SubResource("AnimationLibrary_7b33f")
}
autoplay = "title_chip"

[node name="Fly" type="Sprite2D" parent="." node_paths=PackedStringArray("anim")]
position = Vector2(-110.00001, 139)
scale = Vector2(2.9999998, 2.9999998)
texture = ExtResource("8_7b33f")
script = ExtResource("9_0yuid")
anim = NodePath("AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fly"]
libraries = {
&"": SubResource("AnimationLibrary_sx02u")
}

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 143.0
offset_top = -359.0
offset_right = 565.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4nice")

[node name="Control" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 34.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_vg0i1")

[node name="ClickSoundAudioStream" type="AudioStreamPlayer2D" parent="Panel/Control"]
position = Vector2(92, 152)
stream = ExtResource("2_u5veq")

[node name="MarginContainer" type="MarginContainer" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="Column" type="VBoxContainer" parent="Panel/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MainMenu" type="RichTextLabel" parent="Panel/Control/MarginContainer/Column"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_0yuid")
theme_override_font_sizes/normal_font_size = 40
text = "Main Menu"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGameBtn" type="Button" parent="Panel/Control/MarginContainer/Column"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_0yuid")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("11_vg0i1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ydf1q")
theme_override_styles/hover = SubResource("StyleBoxFlat_sx02u")
theme_override_styles/focus = SubResource("StyleBoxFlat_3nmny")
text = "Start game"

[node name="AboutBtn" type="Button" parent="Panel/Control/MarginContainer/Column"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_0yuid")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("11_vg0i1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ydf1q")
theme_override_styles/hover = SubResource("StyleBoxFlat_sx02u")
theme_override_styles/focus = SubResource("StyleBoxFlat_3nmny")
text = "About"

[node name="SettingsBtn" type="Button" parent="Panel/Control/MarginContainer/Column"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_0yuid")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("11_vg0i1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ydf1q")
theme_override_styles/hover = SubResource("StyleBoxFlat_sx02u")
theme_override_styles/focus = SubResource("StyleBoxFlat_3nmny")
text = "Settings"
